Add image upload feature
