# project/advertising-service/api/src/main/resources/api.yaml
@@ -224,6 +224,38 @@ paths:
                 items:
                   $ref: '#/components/schemas/AdvertisingDto'
 
+  /api/v1/advertisements/image:
+    post:
+      tags:
+        - advertising
+      operationId: uploadImage
+      description: Upload an Image
+      requestBody:
+        description: Image
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required:
+                - adId
+                - images
+              properties:
+                adId:
+                  type: string
+                images:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
+      responses:
+        201:
+          description: Response which indicate success
+          content:
+            application/json:
+              schema:
+                type: string
+
   # ==============================================================================
   # Rating
   # ==============================================================================
